--- a/app/src/main/res/layout/item_history_view_holder.xml
+++ b/app/src/main/res/layout/item_history_view_holder.xml
@@ -29,6 +29,8 @@
             android:layout_marginTop="8dp"
             android:fontFamily="@font/sf_text_semi_bold"
             android:text="@string/category"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:textColor="@color/colorOfTextViewQuiz"
             android:textSize="19sp" />
 
