--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -4,6 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.quiz.QuizActivity">
+    tools:context=".presentation.quiz.QuizActivity">
+
+    <TextView
+        android:id="@+id/text_quizs"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="dlkjajf"
+        android:textSize="40sp"
+        tools:layout_editor_absoluteX="166dp"
+        tools:layout_editor_absoluteY="338dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
