--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -10,8 +10,9 @@
         android:id="@+id/settings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="23dp"
-        android:layout_marginTop="32dp"
+        android:paddingStart="23dp"
+        android:paddingTop="32dp"
+        android:paddingBottom="34dp"
         android:fontFamily="@font/sf_pro_text_bold"
         android:text="@string/settings_fragment"
         android:textColor="@color/colorOfTextViewQuiz"
@@ -23,7 +24,6 @@
         android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:layout_marginTop="34dp"
         android:background="@color/colorOfTextViewQuiz"
         app:layout_constraintTop_toBottomOf="@+id/settings" />
 
@@ -43,8 +43,8 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/sf_text_display_regular"
         android:paddingStart="23dp"
-        android:paddingTop="32dp"
-        android:paddingBottom="32dp"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
         android:text="@string/share_app"
         android:textColor="@color/colorOfTextViewQuiz"
         android:textSize="18sp"
@@ -74,8 +74,8 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/sf_text_display_regular"
         android:paddingStart="23dp"
-        android:paddingTop="32dp"
-        android:paddingBottom="32dp"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
         android:text="@string/rate_us"
         android:textColor="@color/colorOfTextViewQuiz"
         android:textSize="18sp"
@@ -105,8 +105,8 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/sf_text_display_regular"
         android:paddingStart="23dp"
-        android:paddingTop="32dp"
-        android:paddingBottom="32dp"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
         android:text="@string/leave_feedback"
         android:textColor="@color/colorOfTextViewQuiz"
         android:textSize="18sp"
@@ -136,8 +136,8 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/sf_text_display_regular"
         android:paddingStart="23dp"
-        android:paddingTop="32dp"
-        android:paddingBottom="32dp"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
         android:text="@string/clear_history"
         android:textColor="@color/colorOfBottomNavIconSelected"
         android:textSize="18sp"
