quiz fragment desing sizes changed from hard code to dimens

--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -10,12 +10,12 @@
         android:id="@+id/quiz"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="23dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="@dimen/medium_margin"
+        android:layout_marginTop="@dimen/extra_big_margin"
         android:fontFamily="@font/sf_pro_text_bold"
         android:text="@string/quiz"
         android:textColor="@color/colorOfTextViewQuiz"
-        android:textSize="28sp"
+        android:textSize="@dimen/big_text"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,7 +25,7 @@
         android:layout_width="65dp"
         android:layout_height="100dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="29dp"
+        android:layout_marginTop="@dimen/big_margin"
         android:src="@drawable/lc_quiz_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,13 +35,12 @@
         android:id="@+id/quiz_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="43.76dp"
+        android:layout_marginStart="@dimen/extra_big_margin_1"
+        android:layout_marginTop="@dimen/extra_big_margin_2"
         android:fontFamily="@font/sf_text_semi_bold"
-        android:lineSpacingExtra="6sp"
         android:text="@string/quiz_questions_amount"
         android:textColor="@color/colorOfTextViewDifficulty"
-        android:textSize="13sp"
+        android:textSize="@dimen/medium_text"
         app:layout_constraintStart_toStartOf="@+id/quiz"
         app:layout_constraintTop_toBottomOf="@+id/quiz_logo" />
 
@@ -49,10 +48,10 @@
         android:id="@+id/text_view_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="@dimen/extra_small_margin"
         android:fontFamily="@font/sf_text_semi_bold"
         android:text="@string/quiz_amount_10"
-        android:textColor="#3F3356"
+        android:textColor="@color/colorAmount"
         app:layout_constraintBottom_toBottomOf="@+id/quiz_amount"
         app:layout_constraintStart_toEndOf="@+id/quiz_amount"
         app:layout_constraintTop_toTopOf="@+id/quiz_amount" />
@@ -61,9 +60,9 @@
         android:id="@+id/seek_bar_amount"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="50dp"
+        android:layout_marginStart="@dimen/seek_bar_extra_big_margin"
+        android:layout_marginTop="@dimen/seek_bar_small_margin"
+        android:layout_marginEnd="@dimen/seek_bar_extra_big_margin"
         android:max="50"
         android:progress="10"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -74,11 +73,11 @@
         android:id="@+id/text_view_category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/small_margin"
         android:fontFamily="@font/sf_text_semi_bold"
         android:text="@string/quiz_category"
         android:textColor="@color/colorOfTextViewDifficulty"
-        android:textSize="13sp"
+        android:textSize="@dimen/medium_text"
         app:layout_constraintStart_toStartOf="@+id/quiz_amount"
         app:layout_constraintTop_toBottomOf="@+id/seek_bar_amount" />
 
@@ -86,10 +85,10 @@
         android:id="@+id/spinner_category"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
+        android:layout_marginStart="@dimen/spinner_big_margin"
         android:layout_marginTop="5dp"
-        android:layout_marginEnd="64dp"
-        android:elevation="6dp"
+        android:layout_marginEnd="@dimen/spinner_big_margin"
+        android:elevation="@dimen/elevation"
         app:layout_constraintStart_toStartOf="@+id/seek_bar_amount"
         app:layout_constraintTop_toBottomOf="@+id/text_view_category"
         app:popupTextAlignment="start" />
@@ -98,11 +97,11 @@
         android:id="@+id/text_view_difficulty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/small_margin"
         android:fontFamily="@font/sf_text_semi_bold"
         android:text="@string/quiz_difficulty"
         android:textColor="@color/colorOfTextViewDifficulty"
-        android:textSize="13sp"
+        android:textSize="@dimen/medium_text"
         app:layout_constraintStart_toStartOf="@+id/quiz_amount"
         app:layout_constraintTop_toBottomOf="@+id/spinner_category" />
 
@@ -110,10 +109,10 @@
         android:id="@+id/spinner_difficulty"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="64dp"
-        android:elevation="6dp"
+        android:layout_marginStart="@dimen/spinner_big_margin"
+        android:layout_marginTop="@dimen/spinner_small_margin"
+        android:layout_marginEnd="@dimen/spinner_big_margin"
+        android:elevation="@dimen/elevation"
         app:layout_constraintEnd_toEndOf="@+id/seek_bar_amount"
         app:layout_constraintHorizontal_bias="0.066"
         app:layout_constraintStart_toStartOf="@+id/seek_bar_amount"
@@ -127,7 +126,7 @@
         android:layout_height="55dp"
         android:fontFamily="@font/sf_text_semi_bold"
         android:text="@string/start_button_text"
-        android:textSize="15sp"
+        android:textSize="@dimen/start_button_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/spinner_difficulty"
         app:layout_constraintHorizontal_bias="0.493"
