--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="colorOfTextViewDifficulty">#A9A9A9</color>
     <color name="colorOfTextViewQuiz">#000</color>
     <color name="colorOfStatusBar">#FFFFFF</color>
+    <color name="colorAmount">#3F3356</color>
 </resources>
